    DVB service grid

  * Add support for merging one channel into another. 
    Useful if you have multiple providers offering the same DVB service
    but with different names.

  * The embedded HTTP server now logs failed requests

  * Use absolute paths when serving static content (the web app itself)
    This was only a problem when fork()ing a development build

hts-tvheadend (2.3) hts; urgency=low

  * A simple web interface has been added. To access it, visit

    http://host:9981/simple.html

    This web interface is designed to be really tiny with only
    a simple search field and options to record found shows.
    Preferably used from handheld devices.

  * All sensitive information (passwords, etc) are hidden from display
    in the web ui. The text will still be displayed in cleartext when
    editing.

  * Redesigned the DVB configuration tab in the web userinterface:
    - Each adapter have three (or four) tabs
      o General setup and information
      o Grid of multiplexes
      o Grid of services
      o For sattelite adapters, a sattelite configuration tab.

  * Add support for disabling / enabling an entire DVB multiplex

  * Add support for multiple DiSEqC switchports on a single adapter

  * Add support for different sattelite LNBs

  * Graceful handling of DVB adapters that does not support many
    table filters in hardware. Tvheadend will rotate among the available
    ones.

  * Add support for enabling / disabling transports from the DVB configuration

  * Make it possible to remove DVB multiplexes from the web ui

  * Add 'Revert changes' button to all editable grids in the web ui

  * Make it possible to disable the idle scan on per-DVB adapter basis.
    The idle scan is a process to cycles through all multiplex to check
    the quality for each mux continously.

  * Hopefully fix some rounding errors in the EPG display. Ticket #69

  * Use a ''livegrid'' (http://www.ext-livegrid.com/) for displaying EPG.
